--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
         <junit.version>4.12</junit.version>
+        <org.hamcrest.version>1.3</org.hamcrest.version>
 	</properties>
 
 	<dependencies>
@@ -21,5 +22,11 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${org.hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
